# vehicle-app-cpp-template

./: .env  .gitignore  .velocitas-lock.json  .velocitas.json  SIGNAL_SUBSCRIPTION_SUMMARY.md  TEST_COVERAGE_SUMMARY.md  build.sh  conanfile.txt  install_dependencies.sh  rebuild-container.sh  runtime.json  vehicle-app-cpp-sdk-v1.0.3.zip_Zone.Identifier  vehicle-app-cpp-sdk-v1.0.3.zip_sec.endpointdlp  vss-path-adapter.py
.devcontainer/: devcontainer.json
.devcontainer/scripts/: download-vspec-with-token.sh  download-with-gitlab-token.sh  fix-sdk-conanfile.sh  onCreateCommand.sh  onCreateUserHook.sh  onPostStartUserHook.sh  postStartCommand.sh  setup-dependencies.sh  setup-quad-local.sh  upgrade-cli.sh
.devcontainer/scripts/conan_hooks/: fix_sdk_hook.py
.github/workflows/: gen-desired-state.yml  release.yml
app/: AppManifest.json
app/src/: SampleApp.cpp  SampleApp.h
app/tests/: README_TESTS.md  README_speed_updater.md  integration_test.sh  speed_updater.py  test_datapoint_subscriptions.py
dndatamodel-simulator/: Dockerfile  README.md  README_WEB.md  docker-compose.yml  simulator.py  simulator_web.py
dndatamodel-simulator/templates/: index.html  index.html.bak  index_new_hud.html  index_old.html  index_previous.html
downloaded-datamodel/: dataModel_basic.json
vehicle-app-cpp-sdk-v1.0.3/: conanfile.py
vehicle-app-cpp-sdk-v1.0.3/examples/set-data-points/: CMakeLists.txt
vehicle-app-cpp-sdk-v1.0.3/examples/set-data-points/src/: SetDataPointsApp.cpp
vehicle-app-cpp-sdk-v1.0.3/sdk/include/duo/: duo.grpc.pb.cc  duo.grpc.pb.h  duo.pb.cc  duo.pb.h  duo_mock.grpc.pb.h  types.grpc.pb.cc  types.grpc.pb.h  types.pb.cc  types.pb.h  types_mock.grpc.pb.h
vehicle-app-cpp-sdk-v1.0.3/sdk/include/google/api/: annotations.grpc.pb.cc  annotations.grpc.pb.h  annotations_mock.grpc.pb.h  field_behavior.grpc.pb.cc  field_behavior.grpc.pb.h  field_behavior_mock.grpc.pb.h  http.grpc.pb.cc  http.grpc.pb.h  http_mock.grpc.pb.h  httpbody.grpc.pb.cc  httpbody.grpc.pb.h  httpbody_mock.grpc.pb.h
vehicle-app-cpp-sdk-v1.0.3/sdk/include/sdk/: DataPoint.h  DataPointReply.h
vehicle-app-cpp-sdk-v1.0.3/sdk/proto/: CMakeLists.txt
vehicle-app-cpp-sdk-v1.0.3/sdk/proto/duo/: duo.proto  types.proto
vehicle-app-cpp-sdk-v1.0.3/sdk/src/: CMakeLists.txt
(+31 files in other folders)
